--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
       <artifactId>liquibase-core</artifactId>
       <version>4.23.1</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
@@ -140,6 +140,15 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>4.23.1</version>
+        <configuration>
+          <propertyFile>src/main/resources/db/liquibase.properties</propertyFile>
+        </configuration>
       </plugin>
     </plugins>
   </build>
