--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,1 +1,5 @@
 rabbit.interval=10
+url=jdbc:postgresql://localhost:5432/grabber_db
+jdbc.driver=org.postgresql.Driver
+username=postgres
+password=password
