--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.12.1</version>
+    </dependency>
   </dependencies>
 
   <build>
