--- a/src/main/resources/grabber.properties
+++ b/src/main/resources/grabber.properties
@@ -2,4 +2,5 @@ jdbc.driver=org.postgresql.Driver
 url=jdbc:postgresql://localhost:5432/grabber_db
 username=postgres
 password=password
-time=5000
+time=1000
+port=9000
